# ice_v2

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  ContextCentralThread_Schema.md  Doxyfile  Makefile  cmake_install.cmake  diagram.puml  docker-compose.yml  dockerfile  dockerfileCentral  generate_plantuml_class_diagram.py  help.cmake  readme.md  tasks.sh
COMMON/LIB-BASE/: CMakeLists.txt
COMMON/LIB-BASE/include/: ByteArray.h  Converter.h  portable_endian.h  portable_timer.h
COMMON/LIB-BASE/src/: ByteArray.cpp  Converter.cpp  portable_timer.cpp
COMMON/LIB-CONF/: CMakeLists.txt
COMMON/LIB-CONF/include/: Configuration.h  IMSConfiguration.h  IceConfiguration.h  KinetConfiguration.h  LutConfiguration.h  RepoConfiguration.h  SceneConfiguration.h
COMMON/LIB-CONF/src/: Configuration.cpp  IMSconfiguration.cpp  IceConfiguration.cpp  KinetConfiguration.cpp  LutConfiguration.cpp  RepoConfiguration.cpp  SceneConfiguration.cpp
COMMON/LIB-CONTEXT-CENTRAL/: CMakeLists.txt
COMMON/LIB-CONTEXT-CENTRAL/include/: CentralContext.h  DownloadedScripts.h  PresentCpls.h  ScriptState.h  StateServer.h  machine.hpp
COMMON/LIB-CONTEXT-CENTRAL/include/App/: CISInteraction.h  CIS_Interaction.h  CPLInteraction.h  CPL_Interaction.h  ContentInteraction.h  Content_Interaction.h  Context.h  Context.hpp  IdleInteraction.h  IdleSyncInteraction.h  IdleSync_Interaction.h  Idle_Interaction.h  InProdInteraction.h  InProd_Interaction.h  PublishingInteraction.h  Publishing_Interaction.h  ReleaseInteraction.h  Release_Interaction.h  State.h  StateMachine.h  StateMachineManager.h  SyncInteraction.h  SyncLoopInteraction.h  SyncLoop_Interaction.h  Sync_Interaction.h
COMMON/LIB-CONTEXT-CENTRAL/include/ContentOpsApp/: CISInteraction.h  CPLInteraction.h  ContentInteraction.h  Context.h  IdleSyncInteraction.h  InProdInteraction.h  PublishingInteraction.h  ReleaseInteraction.h  State.h  StateMachine.h  StateMachineManager.h  SyncInteraction.h  SyncLoopInteraction.h  TransitionResponse.h
COMMON/LIB-CONTEXT-CENTRAL/include/ContentOpsBoundary/: BoundaryEnum.h  BoundaryManager.h  BoundaryStateMachine.h  BoundaryStateManager.h  COB_Configurator.h  COB_Content.h  COB_ContentRepo.h  COB_Contents.h  COB_Context.h  COB_Cpl.h  COB_CplRepo.h  COB_Cpls.h  COB_Group.h  COB_GroupRepo.h  COB_Groups.h  COB_Localisation.h  COB_LocalisationRepo.h  COB_Localisations.h  COB_Release.h  COB_ReleaseRepo.h  COB_Releases.h  COB_ServerPair.h  COB_ServerPairRepo.h  COB_ServerPairs.h  COB_Site.h  COB_SiteRepo.h  COB_Sites.h  COB_Sync.h  COB_SyncLoop.h  COB_SyncLoopRepo.h  COB_SyncLoops.h  COB_SyncRepo.h  COB_Syncs.h  COB_Type.h  COB_TypeRepo.h  COB_Types.h  ContentContext.h  FSMTypes.h
COMMON/LIB-CONTEXT-CENTRAL/include/ContentOpsDomain/: CISRepo.h  COD_CIS.h  COD_CISRepo.h  COD_CPL.h  COD_CPLRepo.h  COD_Content.h  COD_ContentRepo.h  COD_Cpl.h  COD_CplRepo.h  COD_Group.h  COD_GroupRepo.h  COD_Localisation.h  COD_LocalisationMovie.h  COD_LocalisationRepo.h  COD_Release.h  COD_ReleaseRepo.h  COD_ServerPair.h  COD_ServerPairRepo.h  COD_Site.h  COD_SiteRepo.h  COD_Sync.h  COD_SyncLoop.h  COD_SyncLoopRepo.h  COD_SyncRepo.h  COD_Type.h  COD_TypeMovie.h  COD_TypeRepo.h  CPLRepo.h  Content.h  Release.h  ReleaseRepo.h  Sync.h  SyncLoop.h  SyncLoopRepo.h  SyncRepo.h
COMMON/LIB-CONTEXT-CENTRAL/include/ContentOpsInfra/: HTTPCISInteraction.h  HTTPCPLInteraction.h  HTTPContentInteraction.h  HTTPIdleSyncInteraction.h  HTTPInProdInteraction.h  HTTPInteraction.h  HTTPPublishingInteraction.h  HTTPReleaseInteraction.h  HTTPSyncInteraction.h  HTTPSyncLoopInteraction.h  MySQLCISRepo.h  MySQLCPLRepo.h  MySQLContentRepo.h  MySQLCplRepo.h  MySQLGroupRepo.h  MySQLLocalisationRepo.h  MySQLReleaseRepo.h  MySQLServerPairRepo.h  MySQLSiteRepo.h  MySQLSyncLoopRepo.h  MySQLSyncRepo.h  MySQLTypeRepo.h
COMMON/LIB-CONTEXT-CENTRAL/include/Data/: Auditorium.h  Cinema.h  Cpl.h  Feature.h  Group.h  LinkParam.h  Release.h  ReleaseCut.h  Script.h  Server.h
COMMON/LIB-CONTEXT-CENTRAL/include/Domain/: CIS.h  CISRepo.h  CPL.h  CPLRepo.h  Content.h  ContentRepo.h  LocalisationMovie.h  Release.h  ReleaseRepo.h  Sync.h  SyncLoop.h  SyncLoopRepo.h  SyncRepo.h  TypeMovie.h
COMMON/LIB-CONTEXT-CENTRAL/include/Infra/: HTTPCISInteraction.h  HTTPCPLInteraction.h  HTTPContentInteraction.h  (+15 more)
COMMON/LIB-CONTEXT-CENTRAL/src/: CentralContext.cpp  ScriptState.cpp  StateMachine.cpp  StateMachineMannager.cpp  StateServer.cpp
COMMON/LIB-CONTEXT-CENTRAL/test/: test_groups.cpp
COMMON/LIB-CONTEXT-ICE/: CMakeLists.txt
COMMON/LIB-CONTEXT-ICE/include/: ApplicationContext.h  ContextResponse.h  FrameOutputs.h
COMMON/LIB-CONTEXT-ICE/src/: ApplicationContext.cpp  ContextResponse.cpp  FrameOutputs.cpp
COMMON/LIB-IMAGE/: CMakeLists.txt
COMMON/LIB-IMAGE/include/: calibrer.h  cis.h  cisMerger.h  color.h  image.h  labCalib.h  lut.h  processor.h  seamProcessor.h
COMMON/LIB-IMAGE/src/: calibrer.cpp  cis.cpp  cisMerger.cpp  color.cpp  image.cpp  labCalib.cpp  lut.cpp  processor.cpp  seamProcessor.cpp
COMMON/LIB-IMS/: CMakeLists.txt
COMMON/LIB-IMS/include/: ImsCommunicator.h  ImsMessageHandler.h  ImsRequest.h  ImsResponse.h
COMMON/LIB-IMS/src/: ImsCommunicator.cpp  ImsMessageHandler.cpp  ImsRequest.cpp  ImsResponse.cpp
EXE/PLUGIN/Exporter/: CMakeLists.txt  CisExporter.cpp  CisExporter.h  CisWriter.cpp  CisWriter.h  ExporterSettings.cpp  ExporterSettings.h
EXE/PLUGIN/Moving/: CMakeLists.txt  MovingControler.cpp  MovingControler.h  MovingControlerPiPL.r  MovingHandler.cpp  MovingHandler.h  PresetLoader.cpp  PresetLoader.h  SizeSequenceHandler.cpp  SizeSequenceHandler.h
EXE/PLUGIN/Transmitter/: CMakeLists.txt  TransmitInstance.cpp  TransmitInstance.h  TransmitPlugin.cpp  TransmitPlugin.h  TransmitSocket.cpp  TransmitSocket.h  Transmitter.cpp  Transmitter.h
EXE/R&D/LIB-CUDA/: CMakeLists.txt
EXE/R&D/PROCESSOR/: CMakeLists.txt
EXE/SERVICES/ICE/: CMakeLists.txt
EXE/SERVICES/ICE-MIGRATION/: CMakeLists.txt  main.cpp
EXE/SERVICES/REPO/: CMakeLists.txt
EXE/TOOLS/BASE64DECODER/: CMakeLists.txt  base64Decoder.cpp  base64Decoder.h
EXE/TOOLS/CALIB-PANEL-LAB/: CMakeLists.txt
(+533 files in other folders)
