cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(help.cmake)

set(project_name "PROJECT")
project(${project_name})

## -- target compilation : define what's going to be compiled
option(STEP "STEP" "CORE")

## -- Build own libraries
if (${STEP} STREQUAL "CORE")
	if (UNIX)
		message("Build common libraries")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-BASE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMAGE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONF")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-TEMPLATE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-3D")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CMD")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-SYNCHRO")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-KINET")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMS")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-REPOSITORY")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONTEXT-ICE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONTEXT-REPO")
		message("Build exes")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/SERVICES/ICE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/SERVICES/REPO")
	endif()
endif()

if (${STEP} STREQUAL "CENTRAL")
	if (UNIX)
		message("Build common libraries")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-BASE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMAGE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONF")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-TEMPLATE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-3D")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CMD")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-SYNCHRO")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMS")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-REPOSITORY")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-MYSQL")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONTEXT-CENTRAL")
		message("Build exes")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/SERVICES/CENTRAL")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/SERVICES/ICE-MIGRATION")
	endif()
endif()

if (${STEP} STREQUAL "PLUGIN")
	if (MSVC)
		message("Build plugins")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/PLUGIN/Exporter")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/PLUGIN/Moving")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/PLUGIN/Transmitter")
	endif()
endif()

if (${STEP} STREQUAL "CALIB")

	if (MSVC)
		message("Build common libraries")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-BASE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMAGE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONF")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-TEMPLATE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-3D")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CMD")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-SYNCHRO")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMS")
		message("Build Calibration tools")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/CALIB-PANEL")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/CALIB-DMX")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/CALIB-MH")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/CALIB-MH-POS")
		#add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/CALIB-PANEL-LAB")
	endif()
endif()

if (${STEP} STREQUAL "TOOLS")
	if (MSVC)
		message("Build common libraries")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-BASE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMAGE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CONF")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-TEMPLATE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-3D")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-CMD")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-SYNCHRO")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-REPOSITORY")
		message("Build Tools")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/BASE64DECODER")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/BASE64ENCODER")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/SYNCER")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/TOOLS/SYNCHRO-TEMP")
	endif()
endif()

if (${STEP} STREQUAL "RaD")
	if (MSVC)
		## -- OTHERS
		message("Build common libraries")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-BASE")
		add_subdirectory("${CMAKE_SOURCE_DIR}/COMMON/LIB-IMAGE")
		message("Build Tools")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/R&D/LIB-CUDA")
		add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/R&D/PROCESSOR")
		#add_subdirectory("${CMAKE_SOURCE_DIR}/EXE/R&D/VIDEO-SYNCER")
	endif()
endif()